--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-api-template",
+  "name": "bucketlist-api",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
