--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "jsonwebtoken": "^8.1.1",
+    "load-google-maps-api": "^1.3.2",
     "mongodb": "^2.2.31",
     "mongoose": "^4.12.0",
     "passport": "^0.4.0",
